# BAlg

./: CMakeLists.txt  Doxyfile  NdArray.sln
Boost_tests/: CMakeLists.txt  test1.cpp  test1.cu
NdArray/: Algorithms.cu  Algorithms.cuh  NdArray.cu  NdArray.cuh  NdArray.vcxproj  NdArrayFlex.cpp  NdArrayFlex.h  NdArrayVariadic.cpp  NdArrayVariadic.h  Shape.cpp  Shape.h  kernel.cu
NdArray/Algorithms/: Algorithms.cu  Algorithms.cuh  Algorithms.h  Combine.cu  Combine.cuh  Map.cu  Map.cuh  Reduce.cu  Reduce.cuh  commonFunctionality.cu  commonFunctionality.cuh
